# HookZzNo1

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
app/: build.gradle
app/src/androidTest/java/com/hellodword/hookzzno1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook__main.cpp  hook_dl.cpp  hook_dl.h  hook_libc.cpp  hook_libc.h  hook_utils.cpp  hook_utils.h
app/src/main/java/com/hellodword/hookzzno1/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/hellodword/hookzzno1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
